# volcano

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  chord.h  flood.h  preprocess.h  runtests.py  snic.h  util.h  vesuvius.c  volcano.c  volcano.h
example_data/: test.zarray
examples/: example2.c  renderer.cpp  runtests.c  volcano.c  volcano_example.c
scripts/: decompress_nrrd.py  dl_chunks_to_zarr.py  runtests.py  visualize.py
